--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
     "mongoose": "^6.0.13",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/md5": "^2.3.1",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "@types/sha256": "^0.2.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
