--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.13",
     "next": "12.0.4",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "sha256": "^0.2.0"
   },
@@ -20,8 +24,8 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
-    "@types/sha256": "^0.2.0",
-    "eslint": "7",
+    "@types/sha256": "0.2.0",
+    "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
   }
